--- a/ParkWardAndroid/app/src/main/AndroidManifest.xml
+++ b/ParkWardAndroid/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hackit.parkward">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,8 +21,6 @@
         </activity>
     </application>
 
-    <uses-feature android:name="android.hardware.camera"
-        android:required="true" />
 
 
 </manifest>
